--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 
-<h1>🔥 Free Fire eSports Tournament 🔥</h1>
+<h1> Free Fire eSports Tournament </h1>
 <a class="btn" href="registration.html">🏆 Tournament Registration</a>
 <a class="btn" href="tournament-info.html">ℹ Tournament Information</a>
 <a class="btn" href="gift-card.html">🎁 Get Amazon Gift Card</a>
