--- a/index.html
+++ b/index.html
@@ -1,48 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Free Fire Tournament</title>
-<style>
-    body {
-        background-color: #1b2a49; /* Light-dark blue */
-        font-family: Arial, sans-serif;
-        text-align: center;
-        color: white;
-        margin: 0;
-        padding: 0;
-    }
-    h1 {
-        margin-top: 40px;
-        font-size: 2.5rem;
-        text-shadow: 0 0 10px #00f7ff;
-    }
-    .btn {
-        display: block;
-        width: 250px;
-        margin: 20px auto;
-        padding: 15px;
-        background: linear-gradient(90deg, #00f7ff, #0077ff);
-        color: white;
-        font-size: 1.2rem;
-        text-decoration: none;
-        border-radius: 10px;
-        box-shadow: 0 0 15px #00f7ff;
-        transition: 0.3s;
-    }
-    .btn:hover {
-        box-shadow: 0 0 30px #00f7ff, 0 0 50px #0077ff;
-        transform: scale(1.05);
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Free Fire Tournament</title>
+    <style>
+        body {
+            background-color: #1e4ea0; /* Light-dark blue */
+            font-family: Arial, sans-serif;
+            text-align: center;
+            color: white;
+            margin: 0;
+        }
+        h1 {
+            margin-top: 50px;
+            font-size: 2.5em;
+        }
+        .button {
+            display: block;
+            margin: 20px auto;
+            padding: 15px 25px;
+            background-color: white;
+            color: #1e4ea0;
+            font-size: 18px;
+            font-weight: bold;
+            border: 3px solid #0d3c91;
+            border-radius: 10px;
+            width: 250px;
+            cursor: pointer;
+            text-decoration: none;
+            transition: 0.3s;
+        }
+        .button:hover {
+            background-color: #e0e0e0;
+        }
+        footer {
+            margin-top: 50px;
+            font-size: 0.9em;
+            opacity: 0.8;
+        }
+    </style>
 </head>
 <body>
+    <h1> Free Fire eSports Tournament </h1>
+    <p>Join and win amazing prizes!</p>
 
-<h1> Free Fire eSports Tournament </h1>
-<a class="btn" href="registration.html">🏆 Tournament Registration</a>
-<a class="btn" href="tournament-info.html">ℹ Tournament Information</a>
-<a class="btn" href="gift-card.html">🎁 Get Amazon Gift Card</a>
+    <a href="tournament.html" class="button">🎯 Tournament Registration</a>
+    <a href="info.html" class="button">📜 Tournament Information</a>
+    <a href="https://www.amazon.in/s?k=gift+card" class="button">🎁 Get Amazon Gift Card</a>
 
+    <footer>Hosted by GM | Free Fire Ultimate Battle</footer>
 </body>
 </html>
