--- a/Tournament-info.html
+++ b/Tournament-info.html
@@ -1,80 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tournament Information</title>
-<style>
-    body {
-        background-color: #1b2a49;
-        font-family: Arial, sans-serif;
-        text-align: center;
-        color: white;
-        margin: 0;
-        padding: 0;
-    }
-    h1 {
-        margin-top: 30px;
-        text-shadow: 0 0 10px #00f7ff;
-    }
-    .countdown {
-        font-size: 2rem;
-        margin-top: 30px;
-        padding: 20px;
-        background: rgba(0,0,0,0.4);
-        display: inline-block;
-        border-radius: 10px;
-        box-shadow: 0 0 20px #00f7ff;
-    }
-    a {
-        display: inline-block;
-        margin-top: 30px;
-        padding: 10px 20px;
-        background: #00f7ff;
-        color: black;
-        text-decoration: none;
-        border-radius: 5px;
-        font-weight: bold;
-        transition: 0.3s;
-    }
-    a:hover {
-        background: #0077ff;
-        color: white;
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tournament Registration</title>
+    <style>
+        body {
+            background-color: #1e4ea0;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            color: white;
+            margin: 0;
+        }
+        h1 {
+            margin-top: 20px;
+        }
+        iframe {
+            border: none;
+            width: 90%;
+            height: 90vh;
+        }
+        a {
+            color: yellow;
+        }
+    </style>
 </head>
 <body>
-
-<h1>📅 Tournament Info</h1>
-<p>Date: <strong>29 August 2025</strong></p>
-<p>Time: <strong>3:30 PM (Evening)</strong></p>
-
-<div class="countdown" id="countdown"></div>
-
-<a href="index.html">⬅ Back to Home</a>
-
-<script>
-    // Set tournament date & time
-    var countDownDate = new Date("Aug 29, 2025 15:30:00").getTime();
-
-    var x = setInterval(function() {
-        var now = new Date().getTime();
-        var distance = countDownDate - now;
-
-        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-        document.getElementById("countdown").innerHTML = days + "d " + hours + "h "
-        + minutes + "m " + seconds + "s ";
-
-        if (distance < 0) {
-            clearInterval(x);
-            document.getElementById("countdown").innerHTML = "MATCH STARTED!";
-        }
-    }, 1000);
-</script>
-
+    <h1>🎯 Tournament Registration</h1>
+    <iframe src="https://forms.gle/ksXdsdaJd5NUhEdR6"></iframe>
+    <br><br>
+    <a href="index.html">⬅ Back to Home</a>
 </body>
 </html>
