--- a/registration.html
+++ b/registration.html
@@ -1,57 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Register for Tournament</title>
-<style>
-    body {
-        background-color: #1b2a49;
-        font-family: Arial, sans-serif;
-        text-align: center;
-        color: white;
-        margin: 0;
-        padding: 0;
-    }
-    form {
-        margin-top: 40px;
-        background: rgba(0,0,0,0.5);
-        padding: 20px;
-        display: inline-block;
-        border-radius: 10px;
-        box-shadow: 0 0 15px #00f7ff;
-    }
-    input, button {
-        margin: 10px 0;
-        padding: 10px;
-        width: 250px;
-        border-radius: 5px;
-        border: none;
-    }
-    button {
-        background: #00f7ff;
-        color: black;
-        font-weight: bold;
-        cursor: pointer;
-        transition: 0.3s;
-    }
-    button:hover {
-        background: #0077ff;
-        color: white;
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tournament Registration</title>
+    <style>
+        body {
+            background-color: #1e4ea0;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            color: white;
+            margin: 0;
+        }
+        h1 {
+            margin-top: 20px;
+        }
+        iframe {
+            border: none;
+            width: 90%;
+            height: 90vh;
+        }
+        a {
+            color: yellow;
+        }
+    </style>
 </head>
 <body>
-
-<h1>🏆 Tournament Registration</h1>
-<form action="https://docs.google.com/forms/YOUR_FORM_ID" method="post">
-    <input type="text" name="player_name" placeholder="Player Name" required><br>
-    <input type="text" name="ingame_id" placeholder="In-game ID" required><br>
-    <input type="email" name="email" placeholder="Email" required><br>
-    <button type="submit">Submit</button>
-</form>
-
-<a href="index.html" style="display:block;margin-top:20px;color:#00f7ff;">⬅ Back to Home</a>
-
+    <h1>🎯 Tournament Registration</h1>
+    <iframe src="https://forms.gle/ksXdsdaJd5NUhEdR6"></iframe>
+    <br><br>
+    <a href="index.html">⬅ Back to Home</a>
 </body>
 </html>
