--- a/Tournament-info.html
+++ b/Tournament-info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tournament Registration</title>
+    <title>Tournament Information</title>
     <style>
         body {
             background-color: #1e4ea0;
@@ -15,10 +15,11 @@
         h1 {
             margin-top: 20px;
         }
-        iframe {
-            border: none;
-            width: 90%;
-            height: 90vh;
+        #countdown {
+            font-size: 24px;
+            font-weight: bold;
+            margin-top: 20px;
+            color: yellow;
         }
         a {
             color: yellow;
@@ -26,9 +27,38 @@
     </style>
 </head>
 <body>
-    <h1>🎯 Tournament Registration</h1>
-    <iframe src="https://forms.gle/ksXdsdaJd5NUhEdR6"></iframe>
-    <br><br>
+    <h1>📜 Tournament Information</h1>
+    <p>Date: <strong>Friday, 29 August 2025</strong></p>
+    <p>Time: <strong>3:30 PM (Evening)</strong></p>
+    <p>Prize: ₹200 Play Store Redeem Code</p>
+    <p>Entry Fee: ₹30 Amazon Gift Card</p>
+
+    <div id="countdown"></div>
+
+    <br>
     <a href="index.html">⬅ Back to Home</a>
+
+    <script>
+        // Countdown Timer
+        var countDownDate = new Date("Aug 29, 2025 15:30:00").getTime();
+
+        var x = setInterval(function() {
+            var now = new Date().getTime();
+            var distance = countDownDate - now;
+
+            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+            document.getElementById("countdown").innerHTML =
+                days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
+
+            if (distance < 0) {
+                clearInterval(x);
+                document.getElementById("countdown").innerHTML = "Tournament Started!";
+            }
+        }, 1000);
+    </script>
 </body>
 </html>
