--- a/index.html
+++ b/index.html
@@ -1,54 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free Fire Tournament</title>
-    <style>
-        body {
-            background-color: #1e4ea0; /* Light-dark blue */
-            font-family: Arial, sans-serif;
-            text-align: center;
-            color: white;
-            margin: 0;
-        }
-        h1 {
-            margin-top: 50px;
-            font-size: 2.5em;
-        }
-        .button {
-            display: block;
-            margin: 20px auto;
-            padding: 15px 25px;
-            background-color: white;
-            color: #1e4ea0;
-            font-size: 18px;
-            font-weight: bold;
-            border: 3px solid #0d3c91;
-            border-radius: 10px;
-            width: 250px;
-            cursor: pointer;
-            text-decoration: none;
-            transition: 0.3s;
-        }
-        .button:hover {
-            background-color: #e0e0e0;
-        }
-        footer {
-            margin-top: 50px;
-            font-size: 0.9em;
-            opacity: 0.8;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Free Fire Tournament</title>
+<style>
+    body {
+        font-family: 'Arial Black', sans-serif;
+        background: linear-gradient(135deg, #0b1d3a, #153b73);
+        color: white;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+    }
+
+    h1 {
+        font-size: 3em;
+        margin-top: 40px;
+        text-shadow: 0 0 20px #00f0ff, 0 0 40px #00f0ff;
+        letter-spacing: 3px;
+    }
+
+    .btn {
+        display: block;
+        margin: 20px auto;
+        padding: 15px 25px;
+        font-size: 1.3em;
+        color: #1d3fff;
+        background-color: white;
+        border: 2px solid #0a2c60;
+        border-radius: 50px;
+        width: 280px;
+        text-decoration: none;
+        box-shadow: 0 0 15px #00f0ff;
+        transition: all 0.3s ease;
+    }
+
+    .btn:hover {
+        background-color: #dbe8ff;
+        box-shadow: 0 0 25px #00f0ff, 0 0 50px #00f0ff;
+        transform: scale(1.05);
+    }
+
+    .footer {
+        margin-top: 30px;
+        font-size: 0.9em;
+        color: #ccc;
+    }
+</style>
 </head>
 <body>
-    <h1> Free Fire eSports Tournament </h1>
-    <p>Join and win amazing prizes!</p>
 
-    <a href="tournament.html" class="button">🎯 Tournament Registration</a>
-    <a href="info.html" class="button">📜 Tournament Information</a>
-    <a href="https://www.amazon.in/s?k=gift+card" class="button">🎁 Get Amazon Gift Card</a>
+<h1>🔥 Free Fire eSports Tournament 🔥</h1>
 
-    <footer>Hosted by GM | Free Fire Ultimate Battle</footer>
+<a class="btn" href="https://forms.gle/ksXdsdaJd5NUhEdR6" target="_blank">Tournament Registration</a>
+<a class="btn" href="tournament.html">Tournament Information</a>
+<a class="btn" href="https://www.amazon.in/s?k=amazon+gift+card" target="_blank">Get Amazon Gift Card</a>
+
+<div class="footer">Organized by Pro Gaming Arena • Join Now!</div>
+
 </body>
 </html>
