--- a/Tournament-info.html
+++ b/Tournament-info.html
@@ -1,64 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tournament Information</title>
-    <style>
-        body {
-            background-color: #1e4ea0;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            color: white;
-            margin: 0;
-        }
-        h1 {
-            margin-top: 20px;
-        }
-        #countdown {
-            font-size: 24px;
-            font-weight: bold;
-            margin-top: 20px;
-            color: yellow;
-        }
-        a {
-            color: yellow;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Tournament Information</title>
+<style>
+    body {
+        font-family: 'Arial Black', sans-serif;
+        background: linear-gradient(135deg, #0b1d3a, #153b73);
+        color: white;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+    }
+
+    h1 {
+        font-size: 3em;
+        margin-top: 40px;
+        text-shadow: 0 0 20px #00f0ff, 0 0 40px #00f0ff;
+    }
+
+    .countdown {
+        font-size: 2em;
+        margin-top: 20px;
+        color: #00f0ff;
+        text-shadow: 0 0 10px #00f0ff;
+    }
+
+    .btn {
+        display: inline-block;
+        margin: 20px auto;
+        padding: 10px 20px;
+        font-size: 1.2em;
+        color: #1d3fff;
+        background-color: white;
+        border: 2px solid #0a2c60;
+        border-radius: 50px;
+        text-decoration: none;
+        box-shadow: 0 0 15px #00f0ff;
+        transition: all 0.3s ease;
+    }
+
+    .btn:hover {
+        background-color: #dbe8ff;
+        box-shadow: 0 0 25px #00f0ff, 0 0 50px #00f0ff;
+    }
+</style>
 </head>
 <body>
-    <h1>📜 Tournament Information</h1>
-    <p>Date: <strong>Friday, 29 August 2025</strong></p>
-    <p>Time: <strong>3:30 PM (Evening)</strong></p>
-    <p>Prize: ₹200 Play Store Redeem Code</p>
-    <p>Entry Fee: ₹30 Amazon Gift Card</p>
 
-    <div id="countdown"></div>
+<h1>🏆 Tournament Information 🏆</h1>
+<p>Date: <b>29 August 2025</b> | Time: <b>3:30 PM</b></p>
 
-    <br>
-    <a href="index.html">⬅ Back to Home</a>
+<div class="countdown" id="countdown"></div>
 
-    <script>
-        // Countdown Timer
-        var countDownDate = new Date("Aug 29, 2025 15:30:00").getTime();
+<a class="btn" href="index.html">Back to Home</a>
 
-        var x = setInterval(function() {
-            var now = new Date().getTime();
-            var distance = countDownDate - now;
+<script>
+    // Countdown Timer
+    var countDownDate = new Date("Aug 29, 2025 15:30:00").getTime();
 
-            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+    var x = setInterval(function() {
+        var now = new Date().getTime();
+        var distance = countDownDate - now;
 
-            document.getElementById("countdown").innerHTML =
-                days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
+        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-            if (distance < 0) {
-                clearInterval(x);
-                document.getElementById("countdown").innerHTML = "Tournament Started!";
-            }
-        }, 1000);
-    </script>
+        document.getElementById("countdown").innerHTML =
+            days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
+
+        if (distance < 0) {
+            clearInterval(x);
+            document.getElementById("countdown").innerHTML = "MATCH STARTED!";
+        }
+    }, 1000);
+</script>
+
 </body>
 </html>
